fix: remove overflow scroll on desktop view

--- a/styles/cards.css
+++ b/styles/cards.css
@@ -106,4 +106,8 @@
     border-top-right-radius: var(--card-radius);
     border-bottom-left-radius: 0;
   }
+
+  .cards__description {
+    overflow: hidden;
+  }
 }
